--- a/模型生态选型报告.md
+++ b/模型生态选型报告.md
@@ -89,15 +89,14 @@
 
 ## 💡 2026 最佳工作流建议
 
-1.  **默认设置（Backend/General）**：
-    * 将 `Composer` 和 `General Chat` 默认模型设为 **Composer 1**。
-    * *理由*：处理 80% 的脏活累活，保证开发节奏不中断。
+1.  **前端样式**：
+    * 当需要编写 React 组件、HTML/CSS 或调整页面样式时，切换到 **Claude 4.5 Sonnet**。
 
-2.  **前端切换（Frontend/Design）**：
-    * 当需要编写 React 组件、HTML/CSS 或调整页面样式时，手动切换到 **Claude 4.5 Sonnet**。
+2.  **遇到困难**：
+    * 当生成的代码逻辑跑不通、需要设计新系统架构、 需要大规模重构代码时，切换到 **Claude 4.5 Opus** (Plan Mode) 或 **GPT-5.2**。
 
-3.  **遇到困难（Hard Mode）**：
-    * 当 Composer 1 生成的代码逻辑跑不通，或者需要设计新系统架构时，切换到 **Claude 4.5 Opus** (Plan Mode) 或 **GPT-5.2**。
-
-4.  **脏活累活（Batch Tasks）**：
+3.  **脏活累活**：
     * 需要大量生成文档、注释或补全测试用例时，使用 **Gemini 3 Flash** 以节省成本。
+      
+4.  **接手陌生项目**：
+    * 对项目不了解，需要大范围读取仓库，使用 **Gemini 3 Pro**。
